[package]
name = "zf-zebrachaos"
version = "0.0.0-pre.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Jason Gerard DeRose <jasonderose@gmail.com>"]
readme = "README.md"
documentation = "https://docs.rs/zf-zebrachain"
repository = "https://github.com/zebrafactory/zebrachaos"
description = """
Place holder for the Zebra Factory Content Hash Addressable Object Store.
"""

[dependencies]
arrayvec = "0.7.6"
blake2 = "0.10.6"
subtle = "2.6.1"
